Add EUR currency support and currency selection in admin panel
Added currency field to tour_prices table (RUB/USD/EUR)

Created /api/currencies endpoint for exchange rates

Updated admin panel: added currency selector for tour prices

Implemented cyclic currency switching on site: RUB -> USD -> EUR -> RUB

Updated price display logic with currency conversion

--- a/admin/index.html
+++ b/admin/index.html
@@ -211,8 +211,14 @@
 
         .price-item-row {
             display: grid;
-            grid-template-columns: 1fr 2fr;
+            grid-template-columns: 1fr 1fr 2fr;
             gap: 12px;
+        }
+        
+        @media (max-width: 768px) {
+            .price-item-row {
+                grid-template-columns: 1fr;
+            }
         }
 
         .file-upload {
