--- a/admin/index.html
+++ b/admin/index.html
@@ -960,7 +960,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label class="form-label" for="price">Цена (₽) - базовая</label>
+                        <label class="form-label" for="price">Цена (€) - базовая</label>
                         <input type="number" id="price" name="price" class="form-input" placeholder="Введите базовую цену">
                         <small style="color: rgba(255,255,255,0.5); font-size: 12px; margin-top: 4px; display: block;">Используется для обратной совместимости. Для указания нескольких цен используйте раздел ниже.</small>
                     </div>
